--- a/kedarkala.html
+++ b/kedarkala.html
@@ -326,68 +326,28 @@
                         </figure>
                     </div>
                 </div>
-
-                <div id="poster" class="blocco">
-                    <div class="left_block grid_intern" data-scroll>
-                        <figure>
-                            <img alt="" src="/assets/resources/img/Certvault-Portfolio/font-typo.png">
-                        </figure>
-                    </div>
-                </div>
-                <div id="portf" class="grid_intern">
-                    <div class="margin-r-46" data-scroll>
-                        <div class="text_anim">
-                            <h2 data-scroll-target="#portf">
-                                <span>Apps
-                                    Screens </span>
-                            </h2>
+                <div class="image-horizontal" data-scroll style="background: #161616;" data-humcolor="#fff">
+                    <div class="flex-con" data-scroll data-scroll-direction="horizontal" data-scroll-speed="-1">
+                        <div class="reveal">
+                            <img src="/assets/resources/img/kedar/web-s-1.png">
                         </div>
-                        <div class="text_anim spline_p">
-                            <p>
-                                <span>
-                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
-                                    and
-                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
-                                    an
-                                    effective and secure process.
-                                </span>
-                            </p>
+                        <div class="reveal">
+                            <img src="/assets/resources/img/kedar/web-s-2.png">
+                        </div>
+                        <div class="reveal">
+                            <img src="/assets/resources/img/kedar/web-s-3.png">
                         </div>
                     </div>
-                </div>
-                <div id="poster" class="blocco">
-                    <div class="left_block grid_intern p-d6" data-scroll>
-                        <figure>
-                            <img alt="" src="/assets/resources/img/Certvault-Portfolio/details.png">
-                        </figure>
-                    </div>
-                </div>
-
-                <div id="portf" class="grid_intern" data-scroll data-bgcolor="#fff" data-humcolor="#000">
-                    <div class="margin-r-46" data-scroll>
-                        <div class="text_anim">
-                            <h2 data-scroll-target="#portf">
-                                <span>Pop-ups </span>
-                            </h2>
+                    <div class="flex-con" data-scroll data-scroll-direction="horizontal" data-scroll-speed="1">
+                        <div class="reveal">
+                            <img src="/assets/resources/img/kedar/web-s-4.png">
                         </div>
-                        <div class="text_anim spline_p">
-                            <p>
-                                <span>
-                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
-                                    and
-                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
-                                    an
-                                    effective and secure process.
-                                </span>
-                            </p>
+                        <div class="reveal">
+                            <img src="/assets/resources/img/kedar/web-s-5.png">
                         </div>
-                    </div>
-                </div>
-                <div id="poster" class="blocco">
-                    <div class="left_block grid_intern" data-scroll>
-                        <figure>
-                            <img alt="" src="/assets/resources/img/Certvault-Portfolio/pop-up.png">
-                        </figure>
+                        <div class="reveal">
+                            <img src="/assets/resources/img/kedar/web-s-6.png">
+                        </div>
                     </div>
                 </div>
                 <div class="next-project" data-logo="white" data-toggle="white" data-say="white"
