--- a/kedarkala.html
+++ b/kedarkala.html
@@ -140,8 +140,8 @@
                     <div class="el4 el-bg"></div>
                     <div class="el5 el-bg"></div>
                     <div class="el6 el-bg"></div>
-                    <img class="module--header__bg" src="assets/resources/img/Certvault-Portfolio/Cert-Elements-1.png"
-                        alt="" />
+                    <!-- <img class="module--header__bg" src="assets/resources/img/Certvault-Portfolio/Cert-Elements-1.png"
+                        alt="" /> -->
                     <picture class="tris_titles module--header__image">
                         <!-- <div>
                  <span>PATRONUM</span>
