--- a/works.html
+++ b/works.html
@@ -327,8 +327,8 @@
                                         <div class="content">
                                             <div class="port " data-scroll>
                                                 <a href="#">
-                                                    <img src="/assets/resources/img/DMTCA-mobile-work.png">
-                                                    <h2><span>03</span>Dmtca</h2>
+                                                    <img src="/assets/resources/img/QuickX-mobile-Work.png">
+                                                    <h2><span>03</span>Quickx</h2>
                                                 </a>
                                             </div>
                                         </div>
@@ -338,17 +338,50 @@
                                             <div class="port " data-scroll>
                                                 <a href="#">
                                                     <img src="/assets/resources/img/pdtl-mobile-work.png">
-                                                    <h2><span>04</span>Pdtl</h2>
+                                                    <h2><span>04</span>PDTL</h2>
                                                 </a>
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port " data-scroll>
+                                                <a href="#">
+                                                    <img src="/assets/resources/img/DMTCA-mobile-work.png">
+                                                    <h2><span>05</span>Dmtca</h2>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                     <div class="swiper-slide">
                                         <div class="content">
                                             <div class="port " data-scroll>
                                                 <a href="#">
                                                     <img src="/assets/resources/img/dharan-mobile-work.png">
-                                                    <h2><span>05</span>Dharan</h2>
+                                                    <h2><span>06</span>Dharan</h2>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port " data-scroll>
+                                                <a href="#">
+                                                    <img src="/assets/resources/img/m-certvault.png">
+                                                    <h2><span>07</span>Certvault</h2>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="swiper-slide">
+                                        <div class="content">
+                                            <div class="port " data-scroll>
+                                                <a href="#">
+                                                    <img src="/assets/resources/img/Patrapay-work-mobile.png">
+                                                    <h2><span>08</span>PatraPay</h2>
                                                 </a>
                                             </div>
                                         </div>
@@ -357,12 +390,13 @@
                                         <div class="content">
                                             <div class="port " data-scroll>
                                                 <a href="#">
-                                                    <img src="/assets/resources/img/QuickX-mobile-Work.png">
-                                                    <h2><span>06</span>Quickx</h2>
+                                                    <img src="/assets/resources/img/Riva-mobile-Work.png">
+                                                    <h2><span>09</span>Riavbuild</h2>
                                                 </a>
                                             </div>
                                         </div>
                                     </div>
+
 
                                 </div>
                                 <div class="swiper-pagination"></div>
