--- a/test.html
+++ b/test.html
@@ -154,7 +154,7 @@
                                             <img alt="Project Image" src="/assets/resources/img/work-kedar.png">
                                         </div>
                                         <div class="cs-title">
-                                            <a href="project-8.html">Kedarkala</a>
+                                            <a href="">Kedarkala</a>
                                         </div>
                                     </div>
                                     <div class="cas-project">
@@ -170,7 +170,7 @@
                                             <img alt="Project Image" src="/assets/resources/img/dharan-work.png">
                                         </div>
                                         <div class="cs-title">
-                                            <a href="project-4.html">Dharan</a>
+                                            <a href="">Dharan</a>
                                         </div>
                                     </div>
                                     <div class="cas-project">
@@ -178,7 +178,7 @@
                                             <img alt="Project Image" src="/assets/resources/img/pdtl-work.png">
                                         </div>
                                         <div class="cs-title">
-                                            <a href="project-6.html">Pdtl</a>
+                                            <a href="">Pdtl</a>
                                         </div>
                                     </div>
                                     <div class="cas-project">
