--- a/works.html
+++ b/works.html
@@ -77,23 +77,24 @@
                 <span class="sub-back"><img src="/assets/resources/img/back.png" class="icofont-long-arrow-left"
                         alt=""></span>
 
+                
                 <ul class="menu main-menu">
-                    <li class="menu-item"><a href="about.html">About.</a></li>
+                    <li class="menu-item"><a href="about">About.</a></li>
                     <li class="menu-item has-children"><a> Expertises</a>
 
                         <ul class="sub-menu">
-                            <li class="menu-item"><a href="strategy.html">Strategy</a></li>
-                            <li class="menu-item"><a href="interface-design.html">Design</a></li>
-                            <li class="menu-item"><a href="technology-development.html">Development</a></li>
-                            <li class="menu-item"><a href="digital-marketing.html">Marketing</a></li>
-                            <li class="menu-item"><a href="services.html">All Service</a></li>
+                            <li class="menu-item"><a href="strategy">Strategy</a></li>
+                            <li class="menu-item"><a href="interface-design">Design</a></li>
+                            <li class="menu-item"><a href="technology-development">Development</a></li>
+                            <li class="menu-item"><a href="digital-marketing">Marketing</a></li>
+                            <li class="menu-item"><a href="services">All Service</a></li>
                         </ul>
 
                     </li>
-                    <li class="menu-item"><a href="works.html">Works.</a></li>
-                    <li class="menu-item"><a href="blogs.html"> Insights.</a>
+                    <li class="menu-item"><a href="works">Works.</a></li>
+                    <li class="menu-item"><a href="blogs"> Insights.</a>
                     </li>
-                    <li class="menu-item"><a href="contact.html">Contact.</a></li>
+                    <li class="menu-item"><a href="contact">Contact.</a></li>
                 </ul>
 
 
@@ -245,7 +246,7 @@
                                                 <img alt="Project Image" src="/assets/resources/img/work-kedar.png">
                                             </div>
                                             <div class="cs-title">
-                                                <a href="project-8.html" data-cursor-text="View"
+                                                <a href="" data-cursor-text="View"
                                                     data-cursor=" -color-bl">Kedarkala</a>
                                             </div>
                                         </a>
@@ -258,7 +259,7 @@
                                                 <img alt="Project Image" src="/assets/resources/img/dharan-work.png">
                                             </div>
                                             <div class="cs-title">
-                                                <a href="project-4.html" data-cursor-text="View"
+                                                <a href="" data-cursor-text="View"
                                                     data-cursor=" -color-dharan">Dharan</a>
                                             </div>
                                         </a>
@@ -271,7 +272,7 @@
                                                 <img alt="Project Image" src="/assets/resources/img/pdtl-work.png">
                                             </div>
                                             <div class="cs-title">
-                                                <a href="project-6.html" data-cursor-text="View"
+                                                <a href="" data-cursor-text="View"
                                                     data-cursor=" -color-pdtl">PDTL</a>
                                             </div>
                                         </a>
@@ -284,7 +285,7 @@
                                                 <img alt="Project Image" src="/assets/resources/img/Riva-Work.png">
                                             </div>
                                             <div class="cs-title">
-                                                <a href="project-6.html" data-cursor-text="View"
+                                                <a href="" data-cursor-text="View"
                                                     data-cursor=" -color-pdtl">Rivabuid</a>
                                             </div>
                                         </a>
