--- a/contact.html
+++ b/contact.html
@@ -52,24 +52,25 @@
             <span class="sub-back"><img src="/assets/resources/img/back.png" class="icofont-long-arrow-left"
                   alt=""></span>
 
-            <ul class="menu main-menu">
-               <li class="menu-item"><a href="about.html">About.</a></li>
-               <li class="menu-item has-children"><a> Expertises</a>
+            
+                <ul class="menu main-menu">
+                    <li class="menu-item"><a href="about">About.</a></li>
+                    <li class="menu-item has-children"><a> Expertises</a>
 
-                  <ul class="sub-menu">
-                     <li class="menu-item"><a href="strategy.html">Strategy</a></li>
-                     <li class="menu-item"><a href="interface-design.html">Design</a></li>
-                     <li class="menu-item"><a href="technology-development.html">Development</a></li>
-                     <li class="menu-item"><a href="digital-marketing.html">Marketing</a></li>
-                     <li class="menu-item"><a href="services.html">All Service</a></li>
-                  </ul>
+                        <ul class="sub-menu">
+                            <li class="menu-item"><a href="strategy">Strategy</a></li>
+                            <li class="menu-item"><a href="interface-design">Design</a></li>
+                            <li class="menu-item"><a href="technology-development">Development</a></li>
+                            <li class="menu-item"><a href="digital-marketing">Marketing</a></li>
+                            <li class="menu-item"><a href="services">All Service</a></li>
+                        </ul>
 
-               </li>
-               <li class="menu-item"><a href="works.html">Works.</a></li>
-               <li class="menu-item"><a href="blogs.html"> Insights.</a>
-               </li>
-               <li class="menu-item"><a href="contact.html">Contact.</a></li>
-            </ul>
+                    </li>
+                    <li class="menu-item"><a href="works">Works.</a></li>
+                    <li class="menu-item"><a href="blogs"> Insights.</a>
+                    </li>
+                    <li class="menu-item"><a href="contact">Contact.</a></li>
+                </ul>
 
 
             <div class="menu-widget menu-widget-right">
