--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -77,29 +77,24 @@
                 <span class="sub-back"><img src="/assets/resources/img/back.png" class="icofont-long-arrow-left"
                         alt=""></span>
 
+                
                 <ul class="menu main-menu">
-                    <li class="menu-item"><a href="about.html">About.</a></li>
+                    <li class="menu-item"><a href="about">About.</a></li>
                     <li class="menu-item has-children"><a> Expertises</a>
 
                         <ul class="sub-menu">
-                            <li><a href="https://www.facebook.com/in.enigmadigital" target="_blank" data-magnetic=""
-                                    data-cursor="-opaque">//Facebook</a></li>
-                            <li><a href="https://www.instagram.com/enigmadigital/" target="_blank" data-magnetic=""
-                                    data-cursor="-opaque">//Instagram</a></li>
-                            <li><a href="https://twitter.com/_EnigmaDigital" target="_blank" data-magnetic=""
-                                    data-cursor="-opaque">//Twitter</a></li>
-                            <li><a href="https://www.linkedin.com/company/in-enigmadigital" target="_blank"
-                                    data-magnetic="" data-cursor="-opaque">//LinkedIn</a>
-                            </li>
-                            <li><a href="https://www.behance.net/enigma-digital" target="_blank" data-magnetic=""
-                                    data-cursor="-opaque">//Behance</a></li>
+                            <li class="menu-item"><a href="strategy">Strategy</a></li>
+                            <li class="menu-item"><a href="interface-design">Design</a></li>
+                            <li class="menu-item"><a href="technology-development">Development</a></li>
+                            <li class="menu-item"><a href="digital-marketing">Marketing</a></li>
+                            <li class="menu-item"><a href="services">All Service</a></li>
                         </ul>
 
                     </li>
-                    <li class="menu-item"><a href="works.html">Works.</a></li>
-                    <li class="menu-item"><a href="blogs.html"> Insights.</a>
+                    <li class="menu-item"><a href="works">Works.</a></li>
+                    <li class="menu-item"><a href="blogs"> Insights.</a>
                     </li>
-                    <li class="menu-item"><a href="contact.html">Contact.</a></li>
+                    <li class="menu-item"><a href="contact">Contact.</a></li>
                 </ul>
 
 
