--- a/contact.html
+++ b/contact.html
@@ -248,10 +248,19 @@
                                  </li>
                               </ul>
                            </div>
-                           <div class='enform_footer top_label'> <button class='button enform_button' data-magnetic=""
+                           <div class='enform_footer top_label'> 
+                              <!-- <button class='button enform_button' data-magnetic=""
                                  data-cursor="-opaque" id='enform_submit_button_2' type="submit">Submit <span><img
-                                       src="/assets/resources/img/arrow-icon-c-01.svg" /></span></button>
+                                       src="/assets/resources/img/arrow-icon-c-01.svg" /></span></button> -->
+                                       <a class="submit-btn" type="submit" data-magnetic data-cursor="-opaque">
+                                          <span class="btn__text">Send Inquiry </span><i class="btn__icon btn__icon--append icon-arrow-right-up">
+                                              <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                                                  <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0v-6z"/>
+                                                </svg>
+                                          </i>
+                                      </a>
                            </div>
+                           
                            <div class="success">We received your submission, thank you!</div>
                         </form>
                      </div>
