--- a/index.html
+++ b/index.html
@@ -46,6 +46,122 @@
 
         gtag('config', 'G-PKJE9LVB35');
     </script>
+    <style>
+        
+		.nav {
+			margin-bottom: 30px;
+		}
+		.intrinsic {
+			position: relative;
+			padding-bottom: 75%;
+			height: 0;
+		}
+
+		.intrinsic-2 {
+			padding-bottom: 56.25%;
+		}
+		.intrinsic-3 {
+			padding-bottom: 133.333%;
+		}
+		.intrinsic img,
+		.intrinsic iframe,
+		.intrinsic .lazyload {
+			position:absolute;
+			width: 100%;
+			height: 100%;
+			left: 0;
+			top: 0;
+			border: none;
+			overflow: hidden;
+		}
+		.thumbnail-small {
+			width: 32%;
+			display: inline-block;
+			margin-bottom: 35px;
+		}
+		pre {
+			-moz-tab-size: 2;
+			tab-size: 2;
+		}
+
+		.scroll-view {
+			overflow: auto;
+			overflow-x: auto;
+			overflow-y: hidden;
+            -webkit-overflow-scrolling: touch;
+			position: relative;
+			width: 100%;
+			padding: 2px 2px 10px;
+		}
+		.scroll-doc {
+			display: table;
+			position: relative;
+			text-align: left;
+		}
+		.scroll-item {
+			display: table-cell;
+			vertical-align: middle;
+		}
+		.scroll-item .thumbnail {
+			margin: 5px 10px;
+			width: 230px;
+		}
+		.scroll-item .thumbnail img {
+			width: 100%;
+			height: auto;
+		}
+
+		.no-src.lazyload,
+		.no-src.lazyloading {
+			opacity: 0;
+		}
+
+		.no-src.lazyloaded {
+			opacity: 1;
+			transition: opacity 300ms;
+		}
+
+		[data-expand].lazyload {
+			opacity: 0;
+			transform: scale(0.8);
+		}
+
+		[data-expand].lazyloaded {
+			opacity: 1;
+			transition: all 700ms;
+			transform: scale(1);
+		}
+
+		.effect-row-middle  > [data-expand]:nth-child(2),
+		.effect-row-reverse  > [data-expand]:nth-child(3),
+		.effect-row > [data-expand]:nth-child(1) {
+			transition-delay: 100ms;
+		}
+
+		.effect-row-middle  > [data-expand]:nth-child(1),
+		.effect-row-middle  > [data-expand]:nth-child(3),
+		.effect-row-reverse  > [data-expand]:nth-child(2),
+		.effect-row > [data-expand]:nth-child(2) {
+			transition-delay: 400ms;
+		}
+
+		.effect-row-reverse  > [data-expand]:nth-child(1),
+		.effect-row > [data-expand]:nth-child(3) {
+			transition-delay: 700ms;
+		}
+
+		/*.blur-up {*/
+			/*-webkit-filter: blur(4px);*/
+			/*filter: blur(4px);*/
+			/*transition: filter 400ms, -webkit-filter 400ms;*/
+		/*}*/
+
+		/*.blur-up.lazyloaded {*/
+			/*-webkit-filter: blur(0);*/
+			/*filter: blur(0);*/
+		/*}*/
+	
+    </style>
 </head>
 
 <body data-barba="wrapper" data-header-sticky="true" data-menu-style="overlay" data-page-loader="true">
@@ -606,7 +722,10 @@
                     <div class="about-us-inner d-flex" id="scroll-direction">
                         <div class="about-us-images res o-image" data-scroll data-scroll-sticky
                             data-scroll-target="#scroll-direction">
-                            <img class="" src="/assets/resources/img/Aa.png" alt="" title="" />
+                            <img 
+                            data-src="/assets/resources/img/Aa.webp"
+                            data-srcset="/assets/resources/img/Aa.webp,
+                           " class="lazyload"  alt="" title="" />
                         </div>
 
                         <div class="about-us-content">
@@ -871,7 +990,10 @@
 
                                             <!--Project Image-->
                                             <div class="ar-work-image o-image" data-scroll>
-                                                <img alt="Project Image" src="/assets/resources/img/patronum-work.png">
+                                                <img alt="Project Image" 
+                                                data-src="/assets/resources/img/patronum-work.webp"
+                                                data-srcset="/assets/resources/img/patronum-work.webp,
+                                               " class="lazyload">
                                             </div>
                                             <!--/Project Image-->
                                             <!--Project Title-->
@@ -895,7 +1017,10 @@
                                         <a href="#">
                                             <!--Project Image-->
                                             <div class="ar-work-image o-image" data-scroll>
-                                                <img alt="Project Image" src="/assets/resources/img/work-kedar.png">
+                                                <img alt="Project Image" 
+                                                data-src="/assets/resources/img/work-kedar.webp"
+                                                data-srcset="/assets/resources/img/work-kedar.webp,
+                                               " class="lazyload" >
                                             </div>
                                             <!--/Project Image-->
 
@@ -919,7 +1044,10 @@
                                         <a href="#">
                                             <!--Project Image-->
                                             <div class="ar-work-image o-image" data-scroll>
-                                                <img alt="Project Image" src="/assets/resources/img/pdtl-work.png">
+                                                <img alt="Project Image" 
+                                                data-src="/assets/resources/img/pdtl-work.webp"
+                                                data-srcset="/assets/resources/img/pdtl-work.webp,
+                                               " class="lazyload">
                                             </div>
                                             <!--/Project Image-->
 
@@ -945,7 +1073,10 @@
 
                                             <!--Project Image-->
                                             <div class="ar-work-image o-image" data-scroll>
-                                                <img alt="Project Image" src="/assets/resources/img/QuickX-Work.png">
+                                                <img alt="Project Image " 
+                                                data-src="/assets/resources/img/QuickX-Work.webp"
+                                                data-srcset="/assets/resources/img/QuickX-Work.webp,
+                                               " class="lazyload">
                                             </div>
                                             <!--/Project Image-->
 
@@ -971,7 +1102,10 @@
 
                                             <!--Project Image-->
                                             <div class="ar-work-image o-image" data-scroll>
-                                                <img alt="Project Image" src="./assets/resources/img/DMTCA-work.png">
+                                                <img alt="Project Image"  
+                                                data-src="./assets/resources/img/DMTCA-work.webp"
+                                                data-srcset="./assets/resources/img/DMTCA-work.webp,
+                                               " class="lazyload">
                                             </div>
                                             <!--/Project Image-->
                                             <!--Project Title-->
@@ -1011,7 +1145,7 @@
                                             <div class="port o-image" data-scroll>
                                                 <a href="patronum" data-cursor-text="View"
                                                     data-cursor=" -color-accent-lilac">
-                                                    <img src="/assets/resources/img/patronum-mobile-work.png">
+                                                    <img src="/assets/resources/img/patronum-mobile-work.webp">
                                                     <h2><span>01</span>Patronum</h2>
                                                 </a>
                                             </div>
@@ -1021,7 +1155,7 @@
                                         <div class="content">
                                             <div class="port o-image" data-scroll>
                                                 <a href="#">
-                                                    <img src="/assets/resources/img/work-kedar-mobile.png">
+                                                    <img src="/assets/resources/img/work-kedar-mobile.webp">
                                                     <h2><span>02</span>Kedarkala</h2>
                                                 </a>
                                             </div>
@@ -1032,7 +1166,7 @@
                                         <div class="content">
                                             <div class="port o-image" data-scroll>
                                                 <a href="#">
-                                                    <img src="/assets/resources/img/pdtl-mobile-work.png">
+                                                    <img src="/assets/resources/img/pdtl-mobile-work.webp">
                                                     <h2><span>03</span>PDTL</h2>
                                                 </a>
                                             </div>
@@ -1042,7 +1176,7 @@
                                         <div class="content">
                                             <div class="port o-image" data-scroll>
                                                 <a href="#">
-                                                    <img src="/assets/resources/img/QuickX-mobile-Work.png">
+                                                    <img src="/assets/resources/img/QuickX-mobile-Work.webp">
                                                     <h2><span>04</span>Quickx</h2>
                                                 </a>
                                             </div>
@@ -1052,7 +1186,7 @@
                                         <div class="content">
                                             <div class="port o-image" data-scroll>
                                                 <a href="dmtca">
-                                                    <img src="/assets/resources/img/DMTCA-mobile-work.png">
+                                                    <img src="/assets/resources/img/DMTCA-mobile-work.webp" loading="lazy">
                                                     <h2><span>05</span>Dmtca</h2>
                                                 </a>
                                             </div>
@@ -1367,7 +1501,8 @@
 
     <script src="./assets/vendors/lib/plugins.js"></script>
     <script src="./assets/resources/js/cursor.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script>
+    <script src="/assets/resources/js/lazysize.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/lazyload@2.0.0-rc.2/lazyload.js"></script> -->
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/130527/vanilla-tilt.min.js"></script>
     <script src="assets/resources/js/pages-js/preloader.js"></script>
     <script src="assets/resources/js/page.js"></script>
