--- a/works.html
+++ b/works.html
@@ -186,7 +186,7 @@
                                             <div class="cs-image">
                                                 <div class="showcase-video">
                                                     <img alt="Project Image"
-                                                        src="/assets/resources/img/patronum-work.png">
+                                                        src="/assets/resources/img/patronum-work.webp">
                                                 </div>
                                             </div>
                                             <div class="cs-title">
@@ -198,7 +198,7 @@
                                     <div class="cas-project">
                                         <a href="" data-cursor-text="View" data-cursor=" -color-dmtca">
                                             <div class="cs-image">
-                                                <img alt="Project Image" src="/assets/resources/img/DMTCA-work.png">
+                                                <img alt="Project Image" src="/assets/resources/img/DMTCA-work.webp">
                                             </div>
                                             <div class="cs-title">
                                                 <a href="dmtca.html" data-cursor-text="View"
@@ -209,7 +209,7 @@
                                     <div class="cas-project">
                                         <a href="" data-cursor-text="View" data-cursor=" -color-q">
                                             <div class="cs-image">
-                                                <img alt="Project Image" src="/assets/resources/img/QuickX-Work.png">
+                                                <img alt="Project Image" src="/assets/resources/img/QuickX-Work.webp">
                                             </div>
                                             <div class="cs-title">
                                                 <a href="" data-cursor-text="View" data-cursor=" -color-q">QuickX</a>
@@ -219,7 +219,7 @@
                                     <div class="cas-project">
                                         <a href="certvault.html" data-cursor-text="View" data-cursor=" -color-cert">
                                             <div class="cs-image">
-                                                <img alt="Project Image" src="/assets/resources/img/work-certvault.png">
+                                                <img alt="Project Image" src="/assets/resources/img/work-certvault.webp">
                                             </div>
                                             <div class="cs-title">
                                                 <a href="certvault.html" data-cursor-text="View"
@@ -231,7 +231,7 @@
                                     <div class="cas-project">
                                         <a href="" data-cursor-text="View" data-cursor=" -color-patra">
                                             <div class="cs-image">
-                                                <img alt="Project Image" src="/assets/resources/img/Patrapay-work.png">
+                                                <img alt="Project Image" src="/assets/resources/img/Patrapay-work.webp">
                                             </div>
                                             <div class="cs-title">
                                                 <a href="" data-cursor-text="View" data-cursor=" -color-patra">Patra
@@ -243,7 +243,7 @@
                                     <div class="cas-project">
                                         <a href="" data-cursor-text="View" data-cursor=" -color-bl">
                                             <div class="cs-image">
-                                                <img alt="Project Image" src="/assets/resources/img/work-kedar.png">
+                                                <img alt="Project Image" src="/assets/resources/img/work-kedar.webp">
                                             </div>
                                             <div class="cs-title">
                                                 <a href="" data-cursor-text="View"
@@ -256,7 +256,7 @@
                                     <div class="cas-project">
                                         <a href="" data-cursor-text="View" data-cursor=" -color-dharan">
                                             <div class="cs-image">
-                                                <img alt="Project Image" src="/assets/resources/img/dharan-work.png">
+                                                <img alt="Project Image" src="/assets/resources/img/dharan-work.webp">
                                             </div>
                                             <div class="cs-title">
                                                 <a href="" data-cursor-text="View"
@@ -269,7 +269,7 @@
                                     <div class="cas-project">
                                         <a href="" data-cursor-text="View" data-cursor=" -color-pdtl">
                                             <div class="cs-image">
-                                                <img alt="Project Image" src="/assets/resources/img/pdtl-work.png">
+                                                <img alt="Project Image" src="/assets/resources/img/pdtl-work.webp">
                                             </div>
                                             <div class="cs-title">
                                                 <a href="" data-cursor-text="View"
@@ -282,7 +282,7 @@
                                     <div class="cas-project">
                                         <a href="" data-cursor-text="View" data-cursor=" -color-pdtl">
                                             <div class="cs-image">
-                                                <img alt="Project Image" src="/assets/resources/img/Riva-Work.png">
+                                                <img alt="Project Image" src="/assets/resources/img/Riva-Work.webp">
                                             </div>
                                             <div class="cs-title">
                                                 <a href="" data-cursor-text="View"
@@ -333,7 +333,7 @@
                                             <div class="port " data-scroll>
                                                 <a href="patronum.html" data-cursor-text="View"
                                                     data-cursor=" -color-accent-lilac">
-                                                    <img src="/assets/resources/img/patronum-mobile-work.png">
+                                                    <img src="/assets/resources/img/patronum-mobile-work.webp">
                                                     <h2><span>01</span>Patronum</h2>
                                                 </a>
                                             </div>
@@ -344,7 +344,7 @@
                                         <div class="content">
                                             <div class="port " data-scroll>
                                                 <a href="#">
-                                                    <img src="/assets/resources/img/work-kedar-mobile.png">
+                                                    <img src="/assets/resources/img/work-kedar-mobile.webp">
                                                     <h2><span>02</span>Kedarkala</h2>
                                                 </a>
                                             </div>
@@ -354,7 +354,7 @@
                                         <div class="content">
                                             <div class="port " data-scroll>
                                                 <a href="#">
-                                                    <img src="/assets/resources/img/QuickX-mobile-Work.png">
+                                                    <img src="/assets/resources/img/QuickX-mobile-Work.webp">
                                                     <h2><span>03</span>Quickx</h2>
                                                 </a>
                                             </div>
@@ -364,7 +364,7 @@
                                         <div class="content">
                                             <div class="port " data-scroll>
                                                 <a href="#">
-                                                    <img src="/assets/resources/img/pdtl-mobile-work.png">
+                                                    <img src="/assets/resources/img/pdtl-mobile-work.webp">
                                                     <h2><span>04</span>PDTL</h2>
                                                 </a>
                                             </div>
@@ -374,7 +374,7 @@
                                         <div class="content">
                                             <div class="port " data-scroll>
                                                 <a href="#">
-                                                    <img src="/assets/resources/img/DMTCA-mobile-work.png">
+                                                    <img src="/assets/resources/img/DMTCA-mobile-work.webp">
                                                     <h2><span>05</span>Dmtca</h2>
                                                 </a>
                                             </div>
@@ -385,7 +385,7 @@
                                         <div class="content">
                                             <div class="port " data-scroll>
                                                 <a href="#">
-                                                    <img src="/assets/resources/img/dharan-mobile-work.png">
+                                                    <img src="/assets/resources/img/dharan-mobile-work.webp">
                                                     <h2><span>06</span>Dharan</h2>
                                                 </a>
                                             </div>
@@ -407,7 +407,7 @@
                                         <div class="content">
                                             <div class="port " data-scroll>
                                                 <a href="#">
-                                                    <img src="/assets/resources/img/Patrapay-work-mobile.png">
+                                                    <img src="/assets/resources/img/Patrapay-work-mobile.webp">
                                                     <h2><span>08</span>PatraPay</h2>
                                                 </a>
                                             </div>
@@ -417,7 +417,7 @@
                                         <div class="content">
                                             <div class="port " data-scroll>
                                                 <a href="#">
-                                                    <img src="/assets/resources/img/Riva-mobile-Work.png">
+                                                    <img src="/assets/resources/img/Riva-mobile-Work.webp">
                                                     <h2><span>09</span>Riavbuild</h2>
                                                 </a>
                                             </div>
