--- a/about.html
+++ b/about.html
@@ -47,6 +47,7 @@
 
         gtag('config', 'G-PKJE9LVB35');
     </script>
+
 </head>
 
 
@@ -83,7 +84,7 @@
 
                 <div class="site-logo">
                     <a href="index.html">
-                        <img alt="Site Logo" class="dark-logo" src="/assets/resources/img/enigma-en-logo.svg">
+                        <img alt="Site Logo" class="dark-logo" src="/assets/resources/img/enigma-en-logo.svg" >
                         <!-- <img alt="Site Logo Light" class="light-logo" src="/assets/resources/img/enigma-en-logo.svg"> -->
                     </a>
                 </div>
@@ -189,8 +190,8 @@
                 <section class="about-us-section" data-humcolor="#000">
                     <div class="about-us-inner d-flex" id="scroll-direction">
                         <div class="about-us-image move" data-scroll data-scroll-sticky
-                            data-scroll-target="#scroll-direction"> <img data-scroll
-                                src="/assets/resources/img/about-shape.svg" alt="" title="" />
+                            data-scroll-target="#scroll-direction"> <img data-scroll 
+                            src="/assets/resources/img/about-shape.svg" alt="" loading="eager" />
                         </div>
                         <div class="about-us-content">
                             <div class="welcome-heading d-flex justify-content-sb align-items-start flex-w">
@@ -211,26 +212,21 @@
                                     </span>
                                 </h1>
                                 <h1 class="small-h1" data-textcolor="#000"> <span class="opacity-0" data-scroll
-                                        data-scroll-delay="0.1" data-scroll-offset="60">We operate at
+                                        data-scroll-delay="0.1" data-scroll-offset="60">We operate at intersection
                                         the</span><br />
                                     <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">intersection of
-                                        design,</span>
-                                    <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">consumer psychology,</span><br /> <span
+                                        data-scroll-offset="60"> of
+                                        Design, Consumer Psychology,</span>
+                                    <br />  <span
                                         class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">technology &
+                                        data-scroll-offset="60">Technology & Marketing to create
                                     </span>
 
                                     <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">marketing to create</span><br /> <span class="opacity-0"
-                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">digital brand
+                                        data-scroll-offset="60">  Digital Brand Experiences for the</span><br /> <span class="opacity-0"
+                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">Web  of Tomorrow.
                                     </span>
-                                    <br /> <span class="opacity-0" data-scroll data-scroll-delay="0.1"
-                                        data-scroll-offset="60">experiences for the</span><br /> <span class="opacity-0"
-                                        data-scroll data-scroll-delay="0.1" data-scroll-offset="60">web of tomorrow.
-                                    </span>
-                                    <br />
+                                    
                                 </h1>
                             </div>
 
@@ -2032,7 +2028,7 @@
                     </section>
                     <!-- Marquee -->
                     <section class="marquees" style="background: transparent;">
-                        <a href="#">
+                        <a href="works">
                             <div class="marquees__inner" aria-hidden="true" ref="inner" data-cursor-text="WORK"
                                 data-cursor="-color-white -lg">
                                 <div class="marquees__part">
@@ -2169,10 +2165,11 @@
     <script src="./assets/resources/js/cursor.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="/assets/resources/js/pages-js/preloader.js"></script>
+
     <script src="assets/resources/js/page.js"></script>
     <script src="assets/resources/js/others.js"></script>
 
-
+  
     <script>
         var s = Splitting();
     </script>
