--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 	<meta name="twitter:title" content="Digital Marketing & Creative Design Agency - ROI &amp; Leads through PPC, SMO, SEO Services"/>
 	<meta name="twitter:description" content="Digital Marketing & Creative Design Agency in India ensuring visible ROI through Creative Design, Brand Communication, Social Media Marketing, SEO services, &amp; a lot more."/>
 	<meta name="twitter:image" content="https://www.weareenigma.com./images/enigma-digital.jpg" />
-    <link href="https://unpkg.com/swiper/swiper-bundle.min.css" type="text/css" rel="stylesheet">
-    <link href="assets/resources/styles/css/page.css" type="text/css" rel="stylesheet" />
+    <link  href="https://unpkg.com/swiper/swiper-bundle.min.css" type="text/css" rel="preload" as="style" onload="this.rel='stylesheet'" >
+    <link  rel="preload" href="assets/resources/styles/css/page.css" type="text/css" as="style" onload="this.rel='stylesheet'" />
     <link rel="icon" href="https://weareenigma.com/assets/resources/img/fav-icon.png" type="" sizes="16x16">
     <link href="https://unpkg.com/splitting@1.0.0/dist/splitting.css" type="text/css" rel="stylesheet">
 
@@ -1479,13 +1479,12 @@
 
 
 
-    <script src="https://weareenigma.com/assets/vendors/lib/plugins.min.js"></script>
-    <script src="https://weareenigma.com/assets/resources/js/cursor.min.js"></script>
-    <script src="https://weareenigma.com/assets/resources/js/lazysize.js"></script>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/130527/vanilla-tilt.min.js"></script>
-    <script src="assets/resources/js/pages-js/preloader.js"></script>
-    <script src="assets/resources/js/page.js"></script>
-
+    <script rel="preload" as="script" src="https://weareenigma.com/assets/vendors/lib/plugins.js"></script>
+    <script rel="preload" as="script" src="https://weareenigma.com/assets/resources/js/cursor.min.js"></script>
+    <script rel="preload" as="script" src="https://weareenigma.com/assets/resources/js/lazysize.js"></script>
+    <script  rel="preload" as="script" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/130527/vanilla-tilt.min.js"></script>
+    <script rel="preload" as="script" src="assets/resources/js/pages-js/preloader.js"></script>
+    <script rel="preload" as="script" src="assets/resources/js/page.js"></script>
     <script>
         var s = Splitting();
     </script>
